Forms CSS: less scroll, fix field widths, minor cleanup
Get rid of some rules referring to nonexistent elements and some
bottom padding. Hide the footer better. Eliminates the scroll bar
that appears without need when the links approach the bottom of the
page.

For halfwidth and thirdwidth form fields, share the space evenly
and don't leave an extra space hanging off the side. This was
previously a bit fuzzy because there were spaces in between
the divs, but we've tightened up the HTML to eliminate those, so
we can use exact measurements now.

Also combine a couple of rules and drop old -moz- prefix on
placeholder pseudo-element (not needed since FF 51).

--- a/modules/css/gateway.css
+++ b/modules/css/gateway.css
@@ -40,8 +40,7 @@ textarea {
 	display: inline-block;
 }
 
-#greenBackground,
-div.donor {
+#greenBackground {
 	padding: 16px 24px;
 	min-width: 300px;
 	background-color: #cce7cd;
@@ -84,21 +83,19 @@ input#email {
 }
 
 .halfwidth {
-	width: 50%;
+	width: 49%;
 }
 
 .halfwidth:not( :first-child ) {
 	margin-left: 2%;
-	width: 48%;
 }
 
-.thirdwidth:first-child {
+.thirdwidth {
 	width: 32%;
 }
 
 .thirdwidth:not( :first-child ) {
 	margin-left: 2%;
-	width: 31%;
 }
 
 /* From 2014 appeal */
